--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,10 +22,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine cython
-    - name: Build and publish
+    - name: Build manylinux Python wheels
+      uses: RalfG/python-wheels-manylinux-build@v0.3-manylinux2010_x86_64
+      with:
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+        build-requirements: 'cython'
+        system-packages: 'libzip-dev expat-dev'
+    - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py sdist
-        twine upload --repository https://test.pypi.org/legacy/ dist/*
+        twine upload --repository https://test.pypi.org/legacy/ dist/*-manylinux*.whl
